--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -152,11 +152,49 @@
             <div
               class="list-group-item first-item restaurant-detail-section-header"
             >
-              <h4>Restaurant Menus</h4>
+              <div class="row">
+                <div class="col-md-11">
+                  <h4>Restaurant Menus</h4>
+                </div>
+                <div class="col-md-auto">
+                  <button
+                    mat-icon-button
+                    [matMenuTriggerFor]="menu"
+                    aria-label="Example icon-button with a menu"
+                  >
+                    <mat-icon style="margin-bottom: 4px; margin-left: 1px"
+                      >note_add</mat-icon
+                    >
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button
+                      mat-menu-item
+                      (click)="
+                        goToRoute(
+                          '/create-menu/' + restaurant._id + '/' + 'new-menu'
+                        )
+                      "
+                    >
+                      <mat-icon>menu_book</mat-icon>
+                      <span>Create a BienMenu menu</span>
+                    </button>
+                    <button
+                      mat-menu-item
+                      (click)="openModal('addMenuModal', -1)"
+                    >
+                      <mat-icon>picture_as_pdf</mat-icon>
+                      <span>Upload a PDF menu</span>
+                    </button>
+                    <button mat-menu-item>
+                      <mat-icon>link</mat-icon>
+                      <span>Link to an existing menu</span>
+                    </button>
+                  </mat-menu>
+                </div>
+              </div>
             </div>
-
             <div
-              *ngFor="let menu of restaurant.menus; let i = index"
+              *ngFor="let menu of menus; let i = index"
               class="list-group-item"
             >
               <div class="row menu-row">
@@ -185,7 +223,7 @@
                     mat-raised-button
                     type="button"
                     class="btn btn-block"
-                    (click)="openModal('updatemenumodal' + menu._id, i)"
+                    (click)="updateMenu(menu._id, i)"
                     [disabled]="!menuUpdateAllowed"
                   >
                     Update Menu
@@ -206,17 +244,17 @@
           </div>
           <div class="d-flex flex-column">
             <div class="add">
-              <button
+              <!-- <button
                 mat-raised-button
                 type="button"
                 class="add-btn btn"
-                (click)="openModal('addmenumodal', -1)"
+                (click)="openModal('addMenuModal', -1)"
                 [disabled]="
                   !menuUpdateAllowed || maxMenuCountReached || !hostedInternal
                 "
               >
                 Add Menu
-              </button>
+              </button> -->
               <div
                 class="menu-update-alert alert alert-info"
                 *ngIf="!menuUpdateAllowed"
