--- a/src/app/components/display-menu/display-menu.component.scss
+++ b/src/app/components/display-menu/display-menu.component.scss
@@ -15,15 +15,37 @@
   align-items: center;
   border: solid 5px rgb(247, 245, 245);
   border-radius: 50px;
-  background-color: var(--accent-color);
+  background-color: var(--main-color) !important;
 }
 .hr {
-  background-color: var(--accent-color);
+  background-color: var(--main-color) !important;
+}
+@media (max-width: 700px) {
+  .mobileDisplay {
+    display: none;
+  }
+}
+.food-name {
+  font-weight: 400;
+  padding-top: 8px;
+  @media (max-width: 700px) {
+    font-size: small;
+  }
 }
 .menu-title {
   font-weight: 600;
+  text-align: center;
+  color: white;
+  font-family: "Lobster Two";
+  padding: 10px;
 }
+.food-name-div {
+  width: 250px;
 
+  @media (max-width: 700px) {
+    width: 100px;
+  }
+}
 .section-container {
   display: flex;
   justify-content: center;
@@ -38,13 +60,19 @@
   }
 }
 .small-img {
-  width: 40px;
-
+  width: 30px;
   border-radius: 30px;
+
+  @media (max-width: 700px) {
+    width: 20px;
+    margin: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
 .mat-icon {
   vertical-align: middle;
-  color: var(--accent-color);
+  color: var(--main-color) !important;
 }
 
 .food-item-manager {
