fix some minor styling issues

--- a/src/app/components/create-menu/create-menu.component.html
+++ b/src/app/components/create-menu/create-menu.component.html
@@ -112,9 +112,9 @@
                 />
                 Schedule
                 <span
-                  class="p-1 badge badge-info"
+                  class="p-1 badge empty-selection-badge"
                   *ngIf="!checkShcedulDaysSelected()"
-                  >select at least one day</span
+                  >Select At Least One Day</span
                 >
               </label>
             </div>
