--- a/src/app/components/add-restaurant/add-restaurant.component.html
+++ b/src/app/components/add-restaurant/add-restaurant.component.html
@@ -33,7 +33,7 @@
         adressType="establishment"
       >
       </app-address-autocomplete>
-      <div *ngIf="currentPlan !== 'contact-tracing'">
+      <!-- <div *ngIf="currentPlan !== 'contact-tracing'">
         <div class="md-form">
           <div class="d-flex">
             <span class="field-name">Select an Option </span>
@@ -213,7 +213,7 @@
             {{ maxMenuCount }}.
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="md-form">
         <mdb-icon fas icon="image" class="prefix grey-text"></mdb-icon>
         <input
