--- a/src/app/components/create-menu/create-menu.component.scss
+++ b/src/app/components/create-menu/create-menu.component.scss
@@ -47,7 +47,7 @@
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
-  background-color: #E9ECEF;
+  background-color: #e9ecef;
   padding: 15px;
   border-radius: 5px;
 }
@@ -93,8 +93,7 @@
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
@@ -108,4 +107,9 @@
 
 .item-list.cdk-drop-list-dragging .item-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.empty-selection-badge {
+  background-color: #009688;
+  color: #fffef2;
 }
