--- a/src/app/components/food-item-manager/food-item-manager.component.scss
+++ b/src/app/components/food-item-manager/food-item-manager.component.scss
@@ -33,7 +33,9 @@
 }
 .action-buttons {
   padding-bottom: 20px;
+  width: 100%;
 }
+
 @media (max-width: 700px) {
   .food-name {
     font-size: small;
