--- a/src/app/components/menu-section/menu-section.component.html
+++ b/src/app/components/menu-section/menu-section.component.html
@@ -1,30 +1,67 @@
 <div [formGroup]="sectionForm">
-  <div cdkDropList id="{{sectionForm.controls._id.value}}" [cdkDropListData]="sectionForm.controls.foodItems.value"
-    [cdkDropListConnectedTo]="allSectionsList" class="example-list" (cdkDropListDropped)="drop($event)">
+  <div
+    cdkDropList
+    id="{{ sectionForm.controls._id.value }}"
+    [cdkDropListData]="sectionForm.controls.foodItems.value"
+    [cdkDropListConnectedTo]="allSectionsList"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)"
+  >
     <!-- <input id="section-name-{{menuSection._id}}" type="text" [(ngModel)]="menuSection.name" placeholder="Section Name"> -->
-    <div class="md-form  md-outline">
-      <div class=" d-flex col-md-12 ">
-        <input type="text" id="name-{{sectionForm.controls._id.value}}" formControlName="name" class="form-control"
-          mdbInput mdbValidate required />
-        <label class="ml-3" for="name-{{sectionForm.controls._id.value}}">Section Name</label>
-        <mdb-error class="ml-3" *ngIf="sectionForm.controls.name.invalid && (sectionForm.controls.name.dirty ||
-        sectionForm.controls.name.touched)">
+    <div class="md-form md-outline">
+      <div class="d-flex col-md-12">
+        <input
+          type="text"
+          id="name-{{ sectionForm.controls._id.value }}"
+          formControlName="name"
+          class="form-control"
+          mdbInput
+          mdbValidate
+          required
+        />
+        <label class="ml-3" for="name-{{ sectionForm.controls._id.value }}"
+          >Section Name</label
+        >
+        <mdb-error
+          class="ml-3"
+          *ngIf="
+            sectionForm.controls.name.invalid &&
+            (sectionForm.controls.name.dirty ||
+              sectionForm.controls.name.touched)
+          "
+        >
           Section name is required
         </mdb-error>
-        <mdb-success class="ml-3" *ngIf="sectionForm.controls.name.valid && (sectionForm.controls.name.dirty
-        || sectionForm.controls.name.touched)">Valid
+        <mdb-success
+          class="ml-3"
+          *ngIf="
+            sectionForm.controls.name.valid &&
+            (sectionForm.controls.name.dirty ||
+              sectionForm.controls.name.touched)
+          "
+          >Valid
         </mdb-success>
-        <mdb-icon fas icon="trash-alt" class="grey-text pl-2" (click)="removeSection()" style="cursor: pointer;">
+        <mdb-icon
+          fas
+          icon="trash-alt"
+          class="grey-text pl-2"
+          (click)="removeSection()"
+          style="cursor: pointer"
+        >
         </mdb-icon>
       </div>
-
     </div>
-    <div class="item-box" *ngFor="let item of sectionForm.controls.foodItems.value" cdkDrag>
-      {{item.name}}
+    <div
+      class="item-box"
+      *ngFor="let item of sectionForm.controls.foodItems.value"
+      cdkDrag
+    >
+      {{ item.name }}
     </div>
-    <span class="ml-3 p-1 badge badge-info" *ngIf="sectionForm.controls.foodItems.value.length===0">Add Food
-      To
-      Section is required</span>
-
+    <span
+      class="ml-3 p-1 badge empty-section-badge"
+      *ngIf="sectionForm.controls.foodItems.value.length === 0"
+      >Drag Food Items Here</span
+    >
   </div>
 </div>
