fix cropped image on mobile

--- a/src/app/components/display-menu/display-menu.component.html
+++ b/src/app/components/display-menu/display-menu.component.html
@@ -135,9 +135,9 @@
                         </mat-chip-list>
                       </div>
                     </div>
-                    <div class="col-md-auto">
+                    <div class="col-md-auto" style="padding-left: 50px">
                       <img
-                        width="300px"
+                        class="big-food-image"
                         [src]="menuSectionItem.foodItem.imageUrl"
                       />
                     </div>
